--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -408,6 +408,61 @@ button {
   }
 }
 
+.footer {
+  font-weight: 700;
+}
+
+.footer__text {
+  text-transform: uppercase;
+  color: #fcfcfc;
+}
+
+.footer__uppertitle {
+  margin-bottom: 16px;
+  font-size: 18px;
+  line-height: 1.2222222222;
+}
+
+.footer__undertitle {
+  margin-bottom: 60px;
+  font-size: 34px;
+  line-height: 1.2058823529;
+  letter-spacing: 0.04em;
+}
+
+.footer__list {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+}
+
+.footer__icon {
+  fill: #ffffff;
+}
+
+.footer__contact {
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 4px;
+  font-size: 12px;
+  line-height: 1.8333333333;
+}
+
+.footer__phone {
+  color: #fcfcfc;
+}
+
+.footer__copyright {
+  margin: auto;
+  width: 150px;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: #7a7a7a;
+}
+
 .section__products {
   background-image: url(../images/background/mobile/Backgroud_mobile_885.png);
   background-position: center;
@@ -536,4 +591,109 @@ button {
   border: none;
   background-color: inherit;
   margin-top: auto;
+}
+
+.about__container {
+  padding-top: 61px;
+  padding-bottom: 64px;
+}
+
+.about__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__thumb {
+  position: relative;
+  width: 279px;
+  height: 279px;
+  background-color: #F8D24E;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+  border-radius: 50%;
+  margin-bottom: 62px;
+}
+
+.about__cow {
+  position: absolute;
+  top: 22px;
+  width: 279px;
+}
+
+.about__label {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.21;
+  text-transform: uppercase;
+  color: #fcfcfc;
+  margin-bottom: 12px;
+}
+
+.about__titel {
+  font-family: "Seymour One";
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1.27;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #fcfcfc;
+  margin-bottom: 32px;
+  width: 200px;
+}
+
+.about__values {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2.1;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+  width: 220px;
+  margin-bottom: 4px;
+}
+
+.about__recipes {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+  width: 220px;
+  margin-bottom: 10px;
+}
+
+.about__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 164px;
+  min-height: 42px;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+  background: #F8D24E;
+}
+
+.about__btn:hover {
+  background-color: #0a8817;
+  color: #000000;
+  border: 2px solid #0a8817;
+}
+
+.about__btn:focus {
+  background-color: #0a8817;
+  color: #ffffff;
+  border: 2px solid #0a8817;
+  fill: #ffffff;
+}
+
+.about__btn--text {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.28;
+  margin-right: 4px;
 }/*# sourceMappingURL=index.css.map */
