--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,4 +21,10 @@
       <use href="./images/svg/symbol-defs.svg#burger1"></use>
     </svg>
   </button>
+  <button type="button" class="header__button is-hidden">
+    Buy now
+    <svg class="" width="12" height="12">
+      <use href="./images/svg/symbol-defs.svg#bird"></use>
+    </svg>
+  </button>
 </header>
