--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -21,15 +21,15 @@
       <ul class="products-form__list">
         <li class="products-form__item">
           <label class="products-form__label" for="name">Name</label>
-          <input class="products-form__input" type="text" id="name" name="name"/>
+          <input class="products-form__input" type="text" id="name" name="name" placeholder=" "/>
         </li>
         <li class="products-form__item">
           <label class="products-form__label" for="phone">Phone</label>
-          <input class="products-form__input" type="tel" id="phone" name="phone"/>
+          <input class="products-form__input" type="tel" id="phone" name="phone" placeholder=" "/>
         </li>
         <li class="products-form__item">
           <label class="products-form__label" for="comment">Comment</label>
-          <input class="products-form__input products-form__input--comment" type="text" id="comment" name="comment"/>
+          <input class="products-form__input products-form__input--comment" type="text" id="comment" name="comment" placeholder=" "/>
         </li>
       </ul>
       <button type="button" class="products-form__btn">Submit</button>
