--- a/src/partials/advanteges.html
+++ b/src/partials/advanteges.html
@@ -2,27 +2,23 @@
   <div class="container">
     <h2 class="visually-hidden">advanteges</h2>
     <ul class="advanteges-list">
-      <li class="advanteges-list__item">
+      <li class="advanteges-list__item advanteges-list__item--first">
         <h3 class="advanteges-list__tittle advanteges-list__tittle--first">
           721
         </h3>
-        <p
-          class="advanteges-list__description advanteges-list__description--first"
-        >
+        <p class="advanteges-list__description">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advanteges-list__item">
+      <li class="advanteges-list__item advanteges-list__item--second">
         <h3 class="advanteges-list__tittle advanteges-list__tittle--second">
           16kg
         </h3>
-        <p
-          class="advanteges-list__description advanteges-list__description--second"
-        >
+        <p class="advanteges-list__description">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advanteges-list__item">
+      <li class="advanteges-list__item advanteges-list__item--third">
         <h3 class="advanteges-list__tittle advanteges-list__tittle--third">
           84
         </h3>
