--- a/src/sass/components/_products_modal.scss
+++ b/src/sass/components/_products_modal.scss
@@ -1,5 +1,5 @@
 .products-modal__window {
-  // display: none;
+  display: none;
   position: absolute;
   width: 280px;
   height: 991px;
@@ -68,13 +68,8 @@
 }
 
 .products-modal_circle--green {
-  background: linear-gradient(
-      0deg,
-      rgba(156, 190, 143, 0.7),
-      rgba(156, 190, 143, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+  background: getBgColor(green-circle);
+  box-shadow: getShadow(prod-green);
 
   &::before {
     content: '';
@@ -90,24 +85,10 @@
   }
 }
 
-.products-modal_circle--yellow {
-  background: linear-gradient(
-      0deg,
-      rgba(248, 210, 78, 0.7),
-      rgba(248, 210, 78, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
-}
 
 .products-modal_circle--coral {
-  background: linear-gradient(
-      0deg,
-      rgba(213, 117, 63, 0.7),
-      rgba(213, 117, 63, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+  background: getBgColor(coral-circle);
+  box-shadow: getShadow(prod-coral);
   &::before {
     content: '';
     position: absolute;
@@ -123,13 +104,8 @@
 }
 
 .products-modal_circle--yellow {
-  background: linear-gradient(
-      0deg,
-      rgba(248, 210, 78, 0.7),
-      rgba(248, 210, 78, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+   background: getBgColor(yellow-circle);
+  box-shadow: getShadow(prod-yellow);
   &::before {
     content: '';
     position: absolute;
