Фікстить проблеми з інпутами

--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -42,13 +42,13 @@
         <label class="products-form__label" for="phone">Phone</label>
       </li>
       <li class="products-form__item">
-        <input
+        <textarea
           class="products-form__input products-form__input--comment"
-          type="text"
           id="comment"
           name="comment"
           placeholder=" "
-        />
+          rows="3"
+        ></textarea>
         <label class="products-form__label" for="comment">Comment</label>
       </li>
     </ul>
