--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import './utils/variables';
 @import './base/base';
 
-@import './components/advanteges';
+@import './components/advantages';
 // contacts
 @import './components/contacts';
 @import './components/footer';
