Хедер на таблетку
Подивіться, будь ласка)))

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,29 @@
 <header class="container header">
-  <!-- Магія -->
-  <a href="./"
-    ><img
-      class="logo"
-      srcset="
-        images/logo/mobile/logo_40.png    40w,
-        images/logo/tablet/logo_48.png    48w,
-        images/logo/desktop/Logo_60.png   60w,
-        images/logo/mobile/logo_80.png    80w,
-        images/logo/tablet/logo_96.png    96w,
-        images/logo/desktop/Logo_120.png 120w
-      "
-      src="./images/logo/mobile/logo_40.png"
-      sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 320px) 40px, 100vw"
-      alt="logo-ice-cream"
-    />
-  </a>
-  <button class="burger">
-    <svg class="" width="32" height="32">
-      <use href="./images/svg/symbol-defs.svg#burger1"></use>
-    </svg>
-  </button>
-  <button type="button" class="header__button is-hidden">
+  <div class="header__mobile">
+    <a href="./"
+      ><img
+        class="logo"
+        srcset="
+          images/logo/mobile/logo_40.png    40w,
+          images/logo/tablet/logo_48.png    48w,
+          images/logo/desktop/Logo_60.png   60w,
+          images/logo/mobile/logo_80.png    80w,
+          images/logo/tablet/logo_96.png    96w,
+          images/logo/desktop/Logo_120.png 120w
+        "
+        src="./images/logo/mobile/logo_40.png"
+        sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (min-width: 320px) 40px, 100vw"
+        alt="logo-ice-cream"
+      />
+    </a>
+    <button class="burger">
+      <svg class="" width="32" height="32">
+        <use href="./images/svg/symbol-defs.svg#burger1"></use>
+      </svg>
+    </button>
+  </div>
+
+  <button type="button" class="header__button">
     Buy now
     <svg class="" width="12" height="12">
       <use href="./images/svg/symbol-defs.svg#bird"></use>
