--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,7 @@
 /* header */
 @import './components/header';
 
-@import './components/advanteges';
+@import './components/advantages';
 // contacts
 @import './components/contacts';
 @import './components/footer';
