add menu markup

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -19,6 +19,7 @@ $colors: (
 
 $bg-colors: (
   'main-green': #84a178,
+  'second-green': #97af8d,
   'prod-green': #aec6a5,
   'prod-yellow': #efd478,
   'green-circle': (
