--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -387,18 +387,55 @@ button {
 }
 
 .footer {
+  padding-top: 30px;
   font-weight: 700;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    padding-top: 60px;
+  }
 }
 
 .footer__text {
   text-transform: uppercase;
   color: #fcfcfc;
 }
+@media screen and (min-width: 768px) {
+  .footer__text {
+    width: 352px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__text {
+    width: 510px;
+  }
+}
 
 .footer__uppertitle {
   margin-bottom: 16px;
   font-size: 18px;
   line-height: 1.2222222222;
+}
+@media screen and (min-width: 768px) {
+  .footer__uppertitle {
+    margin-bottom: 8px;
+    font-size: 26px;
+    line-height: 1.2307692308;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__uppertitle {
+    margin-bottom: 14px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.2333333333;
+  }
 }
 
 .footer__undertitle {
@@ -407,6 +444,38 @@ button {
   line-height: 1.2058823529;
   letter-spacing: 0.04em;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__undertitle {
+    margin-bottom: 32px;
+    font-size: 48px;
+    line-height: 1.2291666667;
+    letter-spacing: 0.06em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__blocks {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__blocks {
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__second-block {
+    width: 285px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__second-block {
+    width: 338px;
+  }
+}
 
 .footer__list {
   margin-bottom: 20px;
@@ -414,25 +483,58 @@ button {
   justify-content: flex-end;
   gap: 20px;
 }
+@media screen and (min-width: 768px) {
+  .footer__list {
+    margin-bottom: 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__list {
+    margin-bottom: 40px;
+  }
+}
 
-.footer__icon {
-  fill: #ffffff;
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  height: 34px;
+  background-color: #f8d24e;
+  fill: #84a178;
+  border-radius: 50%;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__link:hover, .footer__link:focus {
+  fill: #fcfcfc;
 }
 
 .footer__contact {
   margin-bottom: 40px;
-  display: flex;
-  justify-content: flex-end;
-  gap: 4px;
   font-size: 12px;
   line-height: 1.8333333333;
+  text-align: right;
+}
+@media screen and (min-width: 768px) {
+  .footer__contact {
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 1.8571428571;
+  }
 }
 
 .footer__phone {
   color: #fcfcfc;
 }
 
+.footer__copyright-container {
+  border-top: 1px solid #e1e1e1;
+  width: 100%;
+}
+
 .footer__copyright {
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin: auto;
   width: 150px;
   font-size: 14px;
@@ -440,12 +542,48 @@ button {
   text-align: center;
   color: #7a7a7a;
 }
+@media screen and (min-width: 768px) {
+  .footer__copyright {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 14px;
+    line-height: 1.8571428571;
+    letter-spacing: 0.02em;
+    width: 298px;
+  }
+}
 
 .section__products {
   background-image: url(../images/background/mobile/background_mobile_885.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 60px 0;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .section__products {
+    background-image: url(../images/background/mobile/background_mobile_1770.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .section__products {
+    background-image: url(../images/background/tablet/background_tablet_963.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .section__products {
+    background-image: url(../images/background/tablet/background_tablet_1926.png);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section__products {
+    background-image: url(../images/background/desktop/background_desktop_1300.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .section__products {
+    background-image: url(../images/background/desktop/background_desktop_2600.png);
+  }
 }
 
 .products__label {
@@ -455,6 +593,16 @@ button {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .products__label {
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__label {
+    font-size: 30px;
+  }
 }
 
 .products__title {
@@ -466,6 +614,18 @@ button {
   text-transform: uppercase;
   margin-bottom: 148px;
 }
+@media screen and (min-width: 768px) {
+  .products__title {
+    font-size: 34px;
+    margin-bottom: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__title {
+    font-size: 36px;
+    margin-bottom: 303px;
+  }
+}
 
 .products__name {
   font-weight: 700;
@@ -476,11 +636,28 @@ button {
   text-transform: uppercase;
   margin-bottom: 40px;
 }
+@media screen and (min-width: 768px) {
+  .products__name {
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__name {
+    font-size: 30px;
+    margin-bottom: 66px;
+  }
+}
 
 .products__info {
   font-size: 14px;
   line-height: 1.7857142857;
   letter-spacing: 0.04em;
+}
+@media screen and (min-width: 1200px) {
+  .products__info {
+    font-size: 16px;
+    margin-bottom: 50px;
+  }
 }
 
 .products__item {
@@ -494,6 +671,7 @@ button {
   border-radius: 24px;
   margin-bottom: 168px;
   background-color: #aec6a5;
+  box-shadow: 0px 8px 30px 0px rgba(212, 20, 67, 0.1019607843);
 }
 .products__item:nth-child(2) {
   background-color: #efd478;
@@ -502,18 +680,42 @@ button {
   background-color: #d6936d;
   margin-bottom: 0;
 }
+@media screen and (min-width: 768px) {
+  .products__item {
+    flex-basis: calc((100% - 32px) / 3);
+    height: 428px;
+    margin-bottom: 0;
+    padding: 108px 26px 12px 26px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__item {
+    flex-basis: calc((100% - 58px) / 3);
+    height: 536px;
+    padding: 165px 64px 60px 64px;
+  }
+}
 
 .products__circle {
   position: absolute;
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  top: -100;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+@media screen and (min-width: 1200px) {
+  .products__circle {
+    width: 302px;
+    height: 302px;
+    top: -60%;
+  }
 }
 
 .products__circle---green {
   background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
-  box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+  box-shadow: 0px 8px 30px 0px rgba(10, 136, 23, 0.2509803922);
 }
 .products__circle---green::before {
   content: "";
@@ -524,12 +726,34 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 200px;
-  height: 200px;
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle---green::before {
+    background-image: url(../images/products/tablet-mobile/1/1_400.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .products__circle---green::before {
+    top: -12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle---green::before {
+    background-image: url(../images/products/desktop/1/1_302.png);
+    top: -16px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle---green::before {
+    background-image: url(../images/products/desktop/1/1_604.png);
+  }
 }
 
 .products__circle--yellow {
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  box-shadow: 0px 8px 30px 0px rgba(153, 114, 23, 0.2509803922);
   background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
   box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
 }
@@ -542,12 +766,33 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 200px;
-  height: 200px;
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/tablet-mobile/2/2_400.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .products__circle--yellow::before {
+    top: -12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/desktop/2/2_302.png);
+    top: -16px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/desktop/2/2_604.png);
+  }
 }
 
 .products__circle--coral {
+  box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.2509803922);
   background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
   box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
 }
@@ -560,15 +805,363 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 200px;
-  height: 200px;
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle--coral::before {
+    background-image: url(../images/products/tablet-mobile/3/3_400.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .products__circle--coral::before {
+    top: -12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle--coral::before {
+    background-image: url(../images/products/desktop/3/3_302.png);
+    top: -16px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle--coral::before {
+    background-image: url(../images/products/desktop/3/3_604.png);
+  }
 }
 
 .products__btn {
   border: none;
   background-color: inherit;
   margin-top: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .products {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 16px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products {
+    gap: 29px;
+  }
+}
+
+.products-modal__window {
+  position: absolute;
+  width: 280px;
+  height: 991px;
+  padding: 28px 28px 29px 28px;
+  background-color: #fcfcfc;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+}
+
+.products-modal {
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.products-modal__title {
+  font-family: "Seymour One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 83px;
+  text-align: center;
+}
+
+.products-modal__item {
+  position: relative;
+  width: 132px;
+  height: 136px;
+  padding-top: 96px;
+  padding-bottom: 20px;
+  text-align: center;
+  border-radius: 15px;
+  margin-bottom: 82px;
+}
+.products-modal__item:first-child {
+  background-color: transparent;
+}
+.products-modal__item:last-child {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.products-modal__item--green {
+  border: 2px solid #96af8c;
+}
+.products-modal__item--yellow {
+  border: 2px solid #efd478;
+}
+.products-modal__item--coral {
+  border: 2px solid #d6936d;
+}
+
+.products-modal__circle {
+  position: absolute;
+  width: 132px;
+  height: 132px;
+  border-radius: 50%;
+  top: -50%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.products-modal_circle--green {
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  box-shadow: 0px 8px 30px 0px rgba(10, 136, 23, 0.2509803922);
+}
+.products-modal_circle--green::before {
+  content: "";
+  position: absolute;
+  top: -7;
+  left: 0;
+  background-image: url(../images/products/tablet-mobile/1/1_200.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 132px;
+  height: 132px;
+}
+
+.products-modal_circle--coral {
+  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
+  box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.2509803922);
+}
+.products-modal_circle--coral::before {
+  content: "";
+  position: absolute;
+  top: -7;
+  left: 0;
+  background-image: url(../images/products/tablet-mobile/3/3_200.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 132px;
+  height: 132px;
+}
+
+.products-modal_circle--yellow {
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  box-shadow: 0px 8px 30px 0px rgba(153, 114, 23, 0.2509803922);
+}
+.products-modal_circle--yellow::before {
+  content: "";
+  position: absolute;
+  top: -7;
+  left: 0;
+  background-image: url(../images/products/tablet-mobile/2/2_200.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 132px;
+  height: 132px;
+}
+
+.products-modal__name {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.products-form__input {
+  position: relative;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  background: rgba(248, 210, 78, 0.1);
+  height: 32px;
+  width: 100%;
+  margin-bottom: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 1.4;
+  color: inherit;
+  resize: none;
+}
+.products-form__input--comment {
+  margin-bottom: 0;
+  height: 65px;
+  padding-top: 8px;
+}
+.products-form__input:not(:-moz-placeholder-shown) + .products-form__label {
+  display: none;
+}
+.products-form__input:not(:-ms-input-placeholder) + .products-form__label {
+  display: none;
+}
+.products-form__input:not(:placeholder-shown) + .products-form__label {
+  display: none;
+}
+
+.products-form__item {
+  position: relative;
+}
+
+.products-form__label {
+  position: absolute;
+  top: 8;
+  left: 12;
+  font-size: 12px;
+  line-height: 1.4;
+}
+
+.products-form__list {
+  margin-bottom: 26px;
+}
+
+.products-form__btn {
+  font-family: inherit;
+  width: 114px;
+  height: 42px;
+  background: #f8d24e;
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+}
+.products-form__btn:hover {
+  background-color: #0a8817;
+}
+.products-form__btn:focus {
+  background-color: #0a8817;
+  color: #fcfcfc;
+}
+
+.products-form {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.products-modal__close {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: inherit;
+  top: 12;
+  right: 12;
+}
+
+.about__container {
+  padding-top: 61px;
+  padding-bottom: 64px;
+}
+
+.about__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__thumb {
+  position: relative;
+  width: 279px;
+  height: 279px;
+  background-color: #F8D24E;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+  border-radius: 50%;
+  margin-bottom: 62px;
+}
+
+.about__cow {
+  position: absolute;
+  top: 22px;
+  width: 279px;
+}
+
+.about__label {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.21;
+  text-transform: uppercase;
+  color: #fcfcfc;
+  margin-bottom: 12px;
+}
+
+.about__titel {
+  font-family: "Seymour One";
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1.27;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #fcfcfc;
+  margin-bottom: 32px;
+  width: 200px;
+}
+
+.about__values {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2.1;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+  width: 220px;
+  margin-bottom: 4px;
+}
+
+.about__recipes {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+  width: 220px;
+  margin-bottom: 10px;
+}
+
+.about__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 164px;
+  min-height: 42px;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+  background: #F8D24E;
+}
+
+.about__btn:hover {
+  background-color: #0a8817;
+  color: #000000;
+  border: 2px solid #0a8817;
+}
+
+.about__btn:focus {
+  background-color: #0a8817;
+  color: #ffffff;
+  border: 2px solid #0a8817;
+  fill: #ffffff;
+}
+
+.about__btn--text {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.28;
+  margin-right: 4px;
 }
 
 .overlay {
@@ -861,5 +1454,49 @@ textarea {
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .background {
     background-image: url("../images/background/desktop/background_desktop_2600.png");
+  }
+}
+
+.nav-menu {
+  z-index: 10;
+}
+@media screen and (max-width: 1200px) {
+  .nav-menu {
+    position: absolute;
+    text-align: center;
+    background-color: #84a178;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .nav-menu {
+    padding: 39px 32px 64px;
+    height: 568px;
+  }
+}
+@media screen and (min-width: 551px) {
+  .nav-menu {
+    padding: 56px 32px 64px;
+    height: 1024px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav-menu {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .navigation {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.22;
+  }
+}
+@media screen and (min-width: 551px) {
+  .navigation {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 1.23;
   }
 }/*# sourceMappingURL=main.css.map */
