--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -1,9 +1,17 @@
 <div class="nav-menu">
   <ul class="navigation">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">How it’s made?</a></li>
-    <li><a href="#">Our products</a></li>
-    <li><a href="#">Contact</a></li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#">Home</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#">How it’s made?</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#">Our products</a>
+    </li>
+    <li class="navigation__item">
+      <a class="navigation__link" href="#">Contact</a>
+    </li>
   </ul>
   <button class="nav-button">
     Buy now
