--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
       />
     </a>
     <button class="burger">
-      <svg class="" width="32" height="32">
+      <svg class="header__svg" width="32" height="32">
         <use href="./images/svg/symbol-defs.svg#burger1"></use>
       </svg>
     </button>
