--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -21,6 +21,8 @@
 
     @media screen and (min-width:768px) {
         gap: 440px;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -35,14 +37,16 @@
 }
 
 .header__button {
-        font-family: inherit;
+
         font-weight: 600;
         font-size: 14px;
         line-height: calc(17 / 14);
-        padding: 12px 36px;
+        padding: 12px 16px;
         display: flex;
         align-items: center;
         text-align: center;
+        justify-content: center;
+        gap: 8px;
         background-color: #F8D24E;
         width: 152px;
         height: 42px;
@@ -56,6 +60,7 @@
         &:focus {
             background-color: #0A8817;
             color: #fff;
+            fill: #fff;
         }
 
         &:disabled {
