add button styles

--- a/src/partials/nav-menu.html
+++ b/src/partials/nav-menu.html
@@ -1,16 +1,16 @@
 <div class="nav-menu">
   <ul class="navigation">
     <li class="navigation__item">
-      <a class="navigation__link" href="#">Home</a>
+      <a class="navigation__link" href="index.html">Home</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#">How it’s made?</a>
+      <a class="navigation__link" href="#about">How it’s made?</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#">Our products</a>
+      <a class="navigation__link" href="#products">Our products</a>
     </li>
     <li class="navigation__item">
-      <a class="navigation__link" href="#">Contact</a>
+      <a class="navigation__link" href="#contacts">Contact</a>
     </li>
   </ul>
   <button class="nav-button">
