--- a/src/sass/components/_nav-menu.scss
+++ b/src/sass/components/_nav-menu.scss
@@ -45,4 +45,14 @@
       margin-bottom: 40px;
     }
   }
+
+  &__link {
+    color: getColor(primary-light);
+    transition: color getAnim(time) getAnim(func);
+  }
+
+  &__link:hover,
+  &__link:focus {
+    color: getColor(primary-dark);
+  }
 }
