Update products modal

--- a/src/partials/products_modal.html
+++ b/src/partials/products_modal.html
@@ -1,6 +1,6 @@
 <div class="products-modal__window">
   <button class="products-modal__close" type="button">
-    <svg width="20" height="20">
+    <svg width="20" height="20" class="products-modal__icon-close">
       <use href="./images/svg/symbol-defs.svg#close-black"></use>
     </svg>
   </button>
