--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="section section__products">
+<section class="section section__products"  id="products">
   <div class="container">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
