--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,8 @@
 @import './components/header';
 
 @import './components/advanteges';
+// customers
+@import './components/customer';
 // contacts
 @import './components/contacts';
 @import './components/footer';
