--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -96,12 +96,65 @@ button {
   border: none;
 }
 
-.advanteges-list {
-  max-width: 230px;
+.container-advantages {
+  padding-top: 50px;
+  padding-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  .container-advantages {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-advantages {
+    padding-top: 65px;
+    padding-bottom: 75px;
+  }
 }
 
-.advanteges-list__tittle {
-  margin-top: 16px;
+.advantages-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list {
+    gap: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-list__item {
+    width: 152px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__item {
+    width: 367px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .advantages-list__item--first {
+    margin-bottom: 28px;
+  }
+  .advantages-list__item--second {
+    margin-bottom: 22px;
+  }
+}
+.advantages-list__tittle {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   margin-bottom: 16px;
   font-weight: 700;
   font-size: 36px;
@@ -109,15 +162,88 @@ button {
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FCFCFC;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__tittle {
+    margin-bottom: 12px;
+    font-size: 48px;
+    line-height: 1.2189583333;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__tittle {
+    font-size: 58px;
+    line-height: 1.2189655172;
+  }
 }
 
-.advanteges-list__description {
+.advantages-list__tittle::before {
+  content: " ";
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__tittle::before {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__tittle::before {
+    margin-bottom: 40px;
+  }
+}
+
+.advantages-list__tittle--first::before {
+  background-image: url(/src/images/advantages/cow/cow_50.png);
+}
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages-list__tittle--first::before {
+    background-image: url(/src/images/advantages/cow/cow_100.png);
+  }
+}
+
+.advantages-list__tittle--second::before {
+  background-image: url(/src/images/advantages/weight/weight_50.png);
+}
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages-list__tittle--second::before {
+    background-image: url(/src/images/advantages/weight/weight_100.png);
+  }
+}
+
+.advantages-list__tittle--third::before {
+  background-image: url(/src/images/advantages/ice/ice_50.png);
+}
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages-list__tittle--third::before {
+    background-image: url(/src/images/advantages/ice/ice_100.png);
+  }
+}
+
+.advantages-list__description {
   font-weight: 700;
   font-size: 12px;
   line-height: 1.6666666667;
   text-align: center;
-  color: #FCFCFC;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__description {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.74;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__description {
+    font-size: 16px;
+    line-height: 1.76;
+  }
 }
 
 @media screen and (max-width: 7670px) {
@@ -1300,10 +1426,6 @@ button {
   }
 }
 
-.modal-form__label .modal-form__input:focus {
-  display: none;
-}
-
 .modal-form__input,
 .modal-form__textarea {
   background: rgba(248, 210, 78, 0.1);
@@ -1311,6 +1433,11 @@ button {
   border-radius: 10px;
   padding: 11px 16px;
   min-width: 368px;
+  font-family: inherit;
+}
+.modal-form__input:focus .modal-form__label,
+.modal-form__textarea:focus .modal-form__label {
+  display: none;
 }
 @media screen and (max-width: 767px) {
   .modal-form__input,
@@ -1345,17 +1472,35 @@ textarea {
   padding: 12px 34px;
   border-color: transparent;
   margin-top: 32px;
+  transition: 250ms linear;
 }
 @media screen and (max-width: 767px) {
   .btn-locations,
 .btn-franchise {
     margin-top: 24px;
+    font-size: 12px;
+    line-height: 1.25;
   }
 }
-.btn-locations:hover, .btn-locations:focus,
-.btn-franchise:hover,
+.btn-locations:hover,
+.btn-franchise:hover {
+  background-color: #0a8817;
+}
+.btn-locations:focus,
 .btn-franchise:focus {
   background-color: #0a8817;
+  color: #fcfcfc;
+}
+
+.modal-location__map {
+  margin-top: 32px;
+}
+@media screen and (max-width: 767px) {
+  .modal-location__map {
+    margin-top: 20px;
+    width: 224px;
+    height: 199px;
+  }
 }
 
 .button__locations {
@@ -1372,8 +1517,15 @@ textarea {
   text-align: center;
   transition: 250ms linear;
 }
-.button__locations:hover, .button__locations:focus {
+.button__locations:hover {
   background-color: #0a8817;
+}
+.button__locations:focus {
+  background-color: #0a8817;
+  color: #fcfcfc;
+}
+.button__locations:focus .button__icon {
+  fill: #fcfcfc;
 }
 
 .button__franchise {
@@ -1390,8 +1542,15 @@ textarea {
   color: #000000;
   transition: 250ms linear;
 }
-.button__franchise:hover, .button__franchise:focus {
+.button__franchise:hover {
   border-color: #0a8817;
+}
+.button__franchise:focus {
+  border-color: #0a8817;
+  color: #fcfcfc;
+}
+.button__franchise:focus .button__icon {
+  fill: #fcfcfc;
 }
 
 .button {
@@ -1422,6 +1581,10 @@ textarea {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.button__icon {
+  transition: 250ms linear;
 }
 
 .background {
@@ -1458,5 +1621,298 @@ textarea {
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .background {
     background-image: url("../images/background/desktop/background_desktop_2600.png");
+  }
+}
+
+.hero__container {
+  position: relative;
+  padding-top: 38px;
+  padding-bottom: 236px;
+  background-image: url("../images/hero/hero-dots/dots_mobile.png");
+  background-repeat: no-repeat;
+  background-position: bottom 0px center;
+}
+@media screen and (min-width: 768px) {
+  .hero__container {
+    padding-bottom: 24px;
+    background-image: url("../images/hero/hero-dots/tablet@1x.png");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    padding-bottom: 103px;
+    background-image: url("../images/hero/hero-dots/dots_1200.png");
+  }
+}
+
+.hero__flex-box {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (min-width: 768px) {
+  .hero__flex-box {
+    margin-bottom: 39px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__flex-box {
+    margin-bottom: 109px;
+  }
+}
+
+.hero__title {
+  margin-bottom: 32px;
+  font-family: "Seymour One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 33px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    margin-bottom: 24px;
+    max-width: 247px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    margin-bottom: 28px;
+    max-width: 367px;
+    font-size: 38px;
+    line-height: 48px;
+  }
+}
+
+.hero__title-part {
+  font-size: 34px;
+  letter-spacing: 0em;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title-part {
+    font-size: 38px;
+    line-height: 48px;
+  }
+}
+
+.hero__link-list {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__link-list {
+    gap: 34px;
+  }
+}
+
+.hero__products-link {
+  padding: 11px 24px;
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+  border: 2px solid #f8d24e;
+  border-radius: 8px;
+  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1), border-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero__products-link:hover {
+  border-color: #0a8817;
+}
+.hero__products-link:focus {
+  border-color: #0a8817;
+}
+@media screen and (min-width: 1200px) {
+  .hero__products-link:focus {
+    color: #fcfcfc;
+    border-color: #0a8817;
+  }
+}
+.hero__products-link:disabled {
+  border-color: #ababab;
+}
+@media screen and (min-width: 1200px) {
+  .hero__products-link {
+    padding: 12px 32px;
+    font-size: 14px;
+    line-height: 18px;
+    border-radius: 10px;
+  }
+}
+
+.hero__made-link {
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  align-items: center;
+  text-align: center;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #f8d24e;
+  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero__made-link:hover {
+  color: #0a8817;
+}
+.hero__made-link:focus {
+  color: #fcfcfc;
+}
+.hero__made-link:disabled {
+  color: #ababab;
+}
+@media screen and (min-width: 1200px) {
+  .hero__made-link:disabled {
+    border-color: #ababab;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__made-link {
+    min-width: 114px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__made-link {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+.hero__benefits {
+  margin-top: 14px;
+}
+@media screen and (max-width: 767px) {
+  .hero__benefits {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__benefits {
+    margin-top: 8px;
+  }
+}
+
+.hero__benefits-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__benefits-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+.hero__benefits-numbers {
+  margin-bottom: 4px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 34px;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+@media screen and (min-width: 1200px) {
+  .hero__benefits-numbers {
+    font-size: 46px;
+    line-height: 56px;
+  }
+}
+
+.hero__benefits-name {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 10px;
+  text-align: right;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 1200px) {
+  .hero__benefits-name {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+.hero__text {
+  max-width: 139px;
+  margin-left: 184px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 140%;
+  /* or 17px */
+  color: #fcfcfc;
+}
+@media screen and (max-width: 767px) {
+  .hero__text {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__text {
+    max-width: 201px;
+    margin-left: 241px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+.hero__text-arrow {
+  display: block;
+  margin-top: 12px;
+  fill: #fcfcfc;
+}
+@media screen and (min-width: 1200px) {
+  .hero__text-arrow {
+    margin-top: 24px;
+  }
+}
+
+.hero__fun-ice {
+  position: absolute;
+  bottom: 0;
+  left: 83px;
+}
+@media screen and (min-width: 768px) {
+  .hero__fun-ice {
+    left: 408px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__fun-ice {
+    left: 652px;
+  }
+}
+
+.hero__lot-ice {
+  display: none;
+  position: absolute;
+}
+@media screen and (min-width: 768px) {
+  .hero__lot-ice {
+    display: block;
+    left: 32px;
+    bottom: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__lot-ice {
+    display: block;
+    left: 16px;
+    bottom: 65px;
   }
 }/*# sourceMappingURL=main.css.map */
