--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,7 +8,7 @@
 
     @media screen and (min-width:768px) {
         display: flex;
-        gap: 36px;
+        gap: 32px;
         align-items: center;
         justify-content: center;
     }
@@ -52,6 +52,9 @@
         height: 42px;
         border-radius: 10px;
         border: transparent;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover {
          background-color: #0A8817;
@@ -70,5 +73,9 @@
         @media screen and (max-width:767px) {
             display: none;
         }
+}
+
+.header__svg {
+    padding: 0;
 }
 
