--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -24,7 +24,7 @@
   background: getColor(primary-light);
   border: 2px solid getColor(accent);
   border-radius: 10px;
-  padding: 32px 50px;
+  padding: 32px 60px;
 
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -79,6 +79,7 @@
 .franchise-modal {
   width: 568px;
   height: 668px;
+  padding: 32px 50px;
 
   @media screen and (max-width: 767px) {
     width: 280px;
@@ -91,7 +92,8 @@
   top: 12px;
   right: 12px;
   fill: getColor(primary-dark);
-  cursor: pointer;
+  border: none;
+  background-color: transparent;
 
   @media screen and (max-width: 767px) {
     width: 20px;
@@ -140,7 +142,11 @@
   min-width: 368px;
   font-family: inherit;
 
-  &:focus .modal-form__label {
+  &:focus + .modal-form__label {
+    display: none;
+  }
+
+  &:not(:placeholder-shown) + .modal-form__label {
     display: none;
   }
 
