--- a/src/partials/modal-backdrop.html
+++ b/src/partials/modal-backdrop.html
@@ -1,6 +1,6 @@
 <div class="modal locations-modal" data-modal="1">
   <button class="modal__cross js-modal-close" type="button">
-    <svg width="24" height="24">
+    <svg class="modal__svg" width="24" height="24">
       <use href="./images/svg/symbol-defs.svg#close-black"></use>
     </svg>
   </button>
@@ -29,7 +29,7 @@
 
 <div class="modal franchise-modal" data-modal="2">
   <button class="modal__cross js-modal-close" type="button">
-    <svg width="24" height="24">
+    <svg class="modal__svg" width="24" height="24">
       <use href="./images/svg/symbol-defs.svg#close-black"></use>
     </svg>
   </button>
