--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -30,22 +30,6 @@
   visibility: visible;
 }
 
-.locations-modal,
-.franchise-modal {
-  background: getColor(primary-light);
-  border: 2px solid getColor(accent);
-  border-radius: 10px;
-  padding: 32px 60px;
-
-  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  background-color: getColor(primary-light);
-
-  @media screen and (max-width: 767px) {
-    padding: 28px;
-  }
-}
-
 .locations-modal {
   width: 568px;
   height: 458px;
@@ -63,7 +47,23 @@
 
   @media screen and (max-width: 767px) {
     width: 280px;
-    height: 100%;
+    height: 710px;
+  }
+}
+
+.locations-modal,
+.franchise-modal {
+  background: getColor(primary-light);
+  border: 2px solid getColor(accent);
+  border-radius: 10px;
+  padding: 32px 60px;
+
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  background-color: getColor(primary-light);
+
+  @media screen and (max-width: 767px) {
+    padding: 28px;
   }
 }
 
@@ -74,7 +74,9 @@
   fill: getColor(primary-dark);
   border: none;
   background-color: transparent;
+}
 
+.modal__svg {
   @media screen and (max-width: 767px) {
     width: 20px;
     height: 20px;
